--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html.light body {
+  background-color: #ffffff;
+}
+
+html.dark body {
+  background-color: #0f172a;
+}
